Fixed the text align

--- a/css/map.css
+++ b/css/map.css
@@ -43,7 +43,6 @@ body {
 
 /* Main marketing message and sign up button */
 .jumbotron {
-  text-align: center;
   border-bottom: .05rem solid #e5e5e5;
 }
 .jumbotron .btn {
